--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -3,3 +3,10 @@ $body-bg: #fff;
 
 /* Font-size */
 $icon-fz: calc(24px + 1.5vw);
+$icon-da: calc(9px + 1.5vw);
+
+$circle: calc(2px + 0.5vw);
+
+$minor-deactive: calc(13px + 0.5vw);
+
+$search-fz: calc(18px + 0.5vw);
