--- a/scss/main.css
+++ b/scss/main.css
@@ -106,22 +106,6 @@ a {
   background: #fff;
 }
 
-.page .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 50px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 10 5% 0 5%;
-}
-
-.page .logo, .account {
-  font-size: calc(24px + 1.5vw);
-}
-
 .page .dots {
   position: absolute;
   display: -webkit-box;
@@ -134,48 +118,97 @@ a {
   top: 50%;
   left: 10;
   padding: 0 0 0 5%;
+  -webkit-filter: blur(10px) contrast(20px);
+          filter: blur(10px) contrast(20px);
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.page .circle {
+.dots.active .circle {
+  width: calc(1px + 0.5vw);
+  margin-top: -0.5vw;
+  margin-bottom: -0.5vw;
+}
+
+.dots.active .circle-a {
+  width: calc(1px + 0.5vw);
+  height: calc(15px + 0.5vw);
+  border-radius: 1.5px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.dots .circle {
   background: #000;
   width: calc(2px + 0.5vw);
   height: calc(2px + 0.5vw);
   border-radius: 50%;
+  margin-top: 1vw;
   margin-bottom: 1vw;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.page .circle-a {
+.dots .circle-a {
   background: #000;
   width: calc(2px + 0.5vw);
   height: calc(2px + 0.5vw);
   border-radius: 50%;
-  margin-bottom: 1vw;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.page .footer {
+.page .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: absolute;
+  width: 100%;
+  height: 50px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  padding: 0 5% 10 5%;
-  bottom: 0;
+  padding: 10 5% 0 5%;
+}
+
+.page .minor {
+  position: relative;
+  width: calc(30px + 0.5vw);
+  height: calc(30px + 0.5vw);
+}
+
+.page .account {
+  position: fixed;
+  font-size: calc(9px + 1.5vw);
+  top: calc(35px + 1.5vw);
+  right: calc(35px + 1.5vw);
 }
 
 .page .search {
-  position: relative;
+  position: fixed;
+  font-size: calc(9px + 1.5vw);
+  top: calc(35px + 1.5vw);
+  right: calc(35px + 1.5vw);
+}
+
+.page .account.active {
+  position: fixed;
+  font-size: calc(24px + 1.5vw);
+  float: right;
+  top: 10;
+  right: calc(15px + 1.5vw);
+}
+
+.page .search.active {
+  position: fixed;
+  font-size: calc(24px + 1.5vw);
+  float: right;
+  top: 10;
+  right: calc(15px + 1.5vw);
 }
 
 .search i {
-  font-size: calc(24px + 1.5vw);
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
   -webkit-transform-origin: center;
@@ -183,12 +216,11 @@ a {
   transform-box: fill-box;
 }
 
-.search span {
-  position: absolute;
-  top: 100%;
-  left: -20%;
-  margin-right: 80%;
-  -webkit-transform: translate(-20%, -100%);
-          transform: translate(-20%, -100%);
-  font-size: calc(11px + 1.5vw);
+.page .logo {
+  text-transform: uppercase;
+}
+
+.logo #school-logo {
+  font-family: 'Roboto';
+  font-weight: 900;
 }
