--- a/scss/main.css
+++ b/scss/main.css
@@ -122,6 +122,7 @@ a {
   height: 40px;
   left: 0;
   top: 50%;
+  z-index: 10;
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
   -webkit-transition: 0.3s;
@@ -207,4 +208,61 @@ a {
 .logo #school-logo {
   font-family: 'Roboto';
   font-weight: 900;
+}
+
+#menu {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 120%;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 9;
+}
+
+#menu.active {
+  top: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#menu .case {
+  font-size: 24;
+}
+
+#menu .case li {
+  margin-top: 5;
+  margin-bottom: 5;
+}
+
+.test {
+  top: 30%;
+  left: 30%;
+  position: absolute;
+  width: 40vw;
+  height: 40vw;
+}
+
+.blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-filter: blur(0px);
+          filter: blur(0px);
+}
+
+.blur.active {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
 }
